deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: mongo-app
  name: mongo-app
  namespace: spring-boot
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongo-app
  template:
    metadata:
      labels:
        name: mongo-app
    spec:
      imagePullSecrets:
      - name: dockerreposecret
      containers:
      - image: pachaanilkumar/mongo-app-service:32f8f41
        name: mongo-app
        ports:
        - name: mongo-app
          containerPort: 8085
---
# Node Port Service
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo-app
  name: mongo-app
  namespace: spring-boot
spec:
  type: NodePort
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    name: mongo-app
