service.yaml

apiVersion: v1
kind: Service
metadata:
  name: bff-account-transforming-service
  namespace: boi-external-proxy-dev
  labels:
    app: bff-account-transforming-service
spec:
  selector:
    app: bff-account-transforming-service
  ports:
  - name: bff-account-tr
    protocol: TCP
    appProtocol: http
    port: 8080
    targetPort: 8080
