virtualservice.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: credit-card-service-vs
  namespace: investment-dev
spec:
  hosts:
  - "*"
  gateways:
  - credit-card-service-gateway
  http:
  - match:
    - uri:
        prefix: /credit-card-service
    route:
    - destination:
        host: credit-card-service
        port:
          number: 8080
